src/test/ui/parser/underscore-suffix-for-string.stderr
warning: underscore literal suffix is not allowed
  --> $DIR/underscore-suffix-for-string.rs:12:18
   |
LL |     let _ = "Foo"_;
   |                  ^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #42326 <https://github.com/rust-lang/rust/issues/42326>

error: expected one of `!` or `::`, found `<eof>`
  --> $DIR/underscore-suffix-for-string.rs:18:1
   |
LL | FAIL
   | ^^^^ expected one of `!` or `::` here

error: aborting due to previous error

